<resources>
    <string name="app_name">Carey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="user_header">User Settings</string>

    <!-- Messages Preferences -->
    <string name="username_title">Your Username</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="text_label_leaderboard">leaderboard</string>
    <string name="text_label_reminders">reminders</string>
    <string name="text_label_workouts">workouts</string>
    <string name="text_label_settings">settings</string>

    <string name="minute_interval">"Every %1$d minutes</string>
    <string name="reminders">Reminders</string>
    <string name="water_checks">Water Checks:</string>
    <string name="notify_me">Notify Me</string>
    <string name="failed_login">Login failed, leaderboard feature won\'t work!</string>
    <string name="leaderboard_SearchPlaceholder">Search…</string>
    <string name="back_to_runs">Back To Runs</string>
    <string name="time_input_hint">Minutes Taken</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="google_maps_key">AIzaSyCs-aaKYZxT2VOR_R2RIE9BcwbGw5g1tAM</string>
    <string name="map_hint">Tap on map to place start and finish</string>
    <string name="distance_hint">Shortest Route Distance:</string>
    <string name="logout">logout</string>
    <string name="username">username</string>
    <string name="run_distance">%d km</string>
</resources>